# SimpleMarkovChain

./: .gitignore  README.md  cache.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: __init__.py  distributions.py
analysis/distributions/: __init__.py  base.py  bayesian.py  mixture.py  simple.py
analysis/psa/: __init__.py  models.py  parameter_resolver.py  parameters.py  sampler.py
app/analysis/: __init__.py
app/analysis/distributions/: __init__.py  base.py  bayesian.py  simple.py
app/analysis/psa/: __init__.py  models.py  parameter_resolver.py  parameters.py  sampler.py
app/data/: clinical.json  utilities.json
app/data/raw/: hemophilia-a-2023.csv  population-un-data-portal-iran.csv
app/domain/: __init__.py  modifiers.py  scenario.py  transition_builder.py  transitions.py  worker.py
app/domain/rewards/: __init__.py  hemophilia.py  pettersson.py
app/notebook/: __init__.py  dataframe_builders.py  display.py  iran_mortality.py  scenario_helpers.py  scenario_runner.py  smoke.py  storage.py
app/notebook_tools/: __init__.py  dataframe_builders.py  parameter_sets.py  scenario_runner.py
app/notebooks/: 01b_mortality_iran.ipynb  02_meta_analysis.ipynb  03_psa_simulation.ipynb  04_owsa_simulation.ipynb  07_owsa_analysis.ipynb
app/persistence/: __init__.py  context.py  loaders.py
app/persistence/schemas/: __init__.py  costs.py  simulation.py
app/visualization/: __init__.py  trajectories.py
app/visualization/plots/: __init__.py  body_weight.py
cache/: on_demand.pkl  prophylaxis.pkl
data/: economic.json  economic_policy.json  mortality.json  mortality_iran.json  simulation.json
data/raw/: irc_fda.csv
data/xlsx/: Transitions.xlsx
deprecated/: analysis.py
deprecated/analysis/: distributions.py
deprecated/domain/: rewards.py
deprecated/src/data/: loaders.py  scarper.py
deprecated/src/plots/: pyramids.py
deprecated/src/processing/: distribution_adjuster.py
deprecated/src/utils/: utils.py
deprecated/tests/: test_markov.py
deprecated/utils/: math.py
deprecated/visualization/: visualization.py
domain/: __init__.py  enums.py  inputs.py  modifiers.py  scenario.py  transitions.py  worker.py
domain/rewards/: __init__.py  hemophilia.py  hemophilia_vectorized.py  pettersson.py
engine/: __init__.py  chains.py  interfaces.py  results.py  runners.py  transitions.py  vectorized.py
markov_chains.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
model/: analysis.py  config.py  constants.py  defined_types.py  dtypes.py  markov.py  markov_chain.py  model.ipynb  probabilistic_analysis.py  scenarios.py  types.py  utils.py  visualization.py
model/.ipynb_checkpoints/: model-checkpoint.ipynb
notebook_tools/: __init__.py  calibration.py  dataframe_builders.py  display.py  iran_mortality.py  parameter_sets.py  reconstruct_iran_male_wpp.py  scenario_helpers.py  scenario_runner.py  smoke.py  storage.py
notebooks/: 00_poisson_mass_functions.ipynb  01_data_exploration_deprecated.ipynb  01_preprocessing.ipynb  01b_mortality_iran.ipynb  02_meta_analysis.ipynb  03_hemophilia_cua.ipynb  03_hemophilia_cua_child.ipynb  03_hemophilia_cua_childrens.ipynb  03_hemophilia_cua_early.ipynb  03_hemophilia_cua_primary.ipynb  03_hemophilia_cua_youngs.ipynb  03_psa_simulation.ipynb  04_hemophilia_cua_adults.ipynb  04_hemophilia_cua_secondary.ipynb  04_owsa_simulation.ipynb  05_poisson_mass_functions.ipynb  07_owsa_analysis.ipynb
notebooks/deprecated/: 01_data_exploration_deprecated.ipynb
outputs/: markov_chain
persistence/: __init__.py  context.py  loaders.py  logging_utils.py
persistence/schemas/: __init__.py  clinicals.py  costs.py  economic_policy.py  mortality.py  results.py  simulation.py  utilities.py
src/Hemophilia_Cost_Utility.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: logger.py
tests/: conftest.py  test_ctmc_rate_to_probability.py  test_decorators.py  test_domain.py  test_engine.py  test_gompertz.py  test_iran_mortality.py  test_loaders.py  test_markov.py  test_math.py  test_notebook_tools.py  test_psa.py  test_transitions.py  test_utils.py
tests/app/: test_domain.py  test_iran_mortality.py  test_loaders.py  test_notebook_tools.py  test_psa.py  test_seeding_reproducibility.py
tests/engine/: test_engine.py  test_transition_generators.py  test_vectorized.py
tests/utils/: test_math.py
utils/: __init__.py  decorators.py  logging.py  math.py  path_utils.py
visualization/: plots.py  trajectories.py  visualization.py
visualization/plots/: __init__.py  body_weight.py
