[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markov-chains"
version = "0.8.0"
description = "Discrete-time Markov chain toolkit for cost-effectiveness analysis and health economic modeling"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Mohammad Hashemian", email = "muhammadhashemian@gmail.com" },
]

keywords = [
  "markov-model",
  "health-economics",
  "cost-effectiveness",
  "psa",
  "monte-carlo",
  "qaly",
  "icer",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Runtime dependencies
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "pydantic>=2",
  "matplotlib",
  "seaborn",
  "plotly",
  "numba",
  "xarray",
  "SALib",
  "statsmodels",
  "pymc",
  "sympy",
  "tqdm",
  "typer",
  "enlighten",
  "pathos",
  "pyarrow",
  "fastparquet",
  "jinja2",
  "openpyxl",
  "polars",
]

# Optional dependency groups
[project.optional-dependencies]

dev = ["pytest", "pytest-cov", "mypy", "ruff"]

notebooks = ["jupyter", "seaborn"]

data = ["openpyxl", "beautifulsoup4", "sdv"]

ml = ["scikit-learn", "hmmlearn"]

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "app*", "utils*"]

# Pytest configuration
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = ["."]
log_cli_format = "%(filename)s:%(lineno)d:[%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = "tests"
# The deprecated/ tree contains a stale, unmaintained test suite that
# imports a long-removed ``model`` module. Exclude it from collection so
# that ``pytest`` from the repo root (or any ``pytest <path>`` glob) does
# not pick it up.
norecursedirs = ["deprecated", ".git", ".venv", "build", "dist"]


# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
# Exclude deprecated code entirely
exclude = ["deprecated/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# N999: project folder has a hyphen (invalid module name) — not a code issue
ignore = ["N999"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/notebooks/*.py" = ["E402", "E501", "F821", "F841", "E722", "N806", "N803", "W291", "W293"]
"app/notebooks/*.ipynb" = ["E402", "E501", "F821", "F841", "E722", "N806", "N803", "W291", "W293"]
"app/notebooks/**/*.ipynb" = ["E402", "E501", "F821", "F841", "E722", "N806", "N803", "W291", "W293"]
"tests/*.py" = ["N803", "N806", "E501"]
"tests/**/*.py" = ["N803", "N806", "E501"]
"app/notebook_tools/*.py" = ["E501", "F821"]
"app/analysis/distributions.py" = ["N806", "F821"]
"engine/transitions.py" = ["N806"]
"engine/runners.py" = ["N803"]
"utils/math.py" = ["N806"]
"app/persistence/context.py" = ["E501"]

# MyPy configuration
[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
warn_unreachable = true
disable_error_code = ["no-untyped-def"]
